--- a/package.json
+++ b/package.json
@@ -14,5 +14,6 @@
       "path": "Samples/Shapes"
     }
   ],
-  "description": "wit-unity is the Unity SDK for Wit.ai. It provides convenience tools for activating wit and processing the responses that are returned."
+  "description": "wit-unity is the Unity SDK for Wit.ai. It provides convenience tools for activating wit and processing the responses that are returned.",
+  "unity": "2019.4"
 }
