Fix asmdef name

--- a/Scripts/Runtime/Facebook.Wit.asmdef
+++ b/Scripts/Runtime/Facebook.Wit.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Facebook..WitAI",
+    "name": "Facebook.WitAI",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
